check the css-only update
